# versioning

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  branch-protection-rules.json  pyproject.toml
.github/workflows/: check_changelog.yml  pre-commit.yml  pull_request.yml  version_bump.yml
src/demo/: cli.py
