[project]
name = "versioning"
version = "0.9.1"
description = "Demo versioning python project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bump-my-version>=0.32.2",
]

[project.scripts]
demo = "demo.cli:app"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
tag_message = "Bump version: {current_version} → {new_version}"
commit = true
tag = true
sign_tags = false
tag_name = "v{new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"